# acme-order-pipeline

./: .dockerignore  .env  .env.example  .gitignore  ACME Endpoints.postman_collection.json  Dockerfile  README.md  docker-compose.yml  monitor-kafka.js  package-lock.json  pyproject.toml  requirements.txt  worker-entrypoint.sh
app/: README.md  main.py
app/config/: settings.py
app/db/: mongodb.py  postgres.py
app/kafka/: consumer.py  producer.py
app/models/: inventory_model.py  order_model.py  product_model.py
app/routers/: orders_query_router.py  orders_router.py  products_router.py
apps/api/: wsgi.py
apps/common/config/: base.py
apps/domain/: entities.py  errors.py
apps/infrastructure/config/: worker_settings.py
apps/infrastructure/http/: flask_app.py
apps/infrastructure/services/: clock_impl.py  uuid_impl.py
apps/usecase/: commands.py  create_order.py  get_inventory.py  get_order.py  get_products.py  list_user_orders.py
apps/usecase/ports/: clock.py  event_bus.py  idempotency_store.py  inventory_repo.py  order_read_repo.py  payment_gateway.py  product_repo.py  uuid_gen.py
apps/worker/: main.py
backend/: requirements.txt  utils.py
backend/api/: db.py  main.py  models.py
backend/consumer/: main.py
backend/proto/: order.proto
db/: ddl.sql
init-scripts/mongodb/: 01-init.js
init-scripts/postgres/: 01-init.sql
microservices/inventories/: jest.config.js  package-lock.json  package.json
microservices/inventories/src/: index.js
microservices/orders/: jest.config.js  package-lock.json  package.json
(+71 files in other folders)
