[project]
name = "acme-order-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "Flask==3.0.3",
  "grpcio-tools==1.66.2",
  "gunicorn==22.0.0",
  "kafka-python-ng==2.2.3",
  "protobuf==5.28.2",
  "psycopg[binary]==3.2.3",
  "pydantic==2.9.2",
  "pydantic-settings==2.5.2",
  "pymongo==4.8.0",
  "sqlalchemy==2.0.36",
]

[tool.uv]
